--- a/Store.Api/appsettings.json
+++ b/Store.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost;Port=5433;Database=db_store;User Id=postgres;Password=diego;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
